src-errormsg/E09-MissingOrd/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E09-MissingOrd/Plinth.hs:13:8: error: [GHC-39999]
    • No instance for ‘Ord a’ arising from a use of ‘<’
      Possible fix:
        add (Ord a) to the context of
          the type signature for:
            clamp :: forall a. a -> a -> a -> a
    • In the expression: x < lo
      In the expression: if x < lo then lo else if x > hi then hi else x
      In an equation for ‘clamp’:
          clamp lo hi x = if x < lo then lo else if x > hi then hi else x
   |
13 |   if x < lo
   |        ^
